FIX: horizontal scrolling

--- a/static/index.css
+++ b/static/index.css
@@ -141,7 +141,6 @@
 }
 
 footer {
-    width: 100%;
     text-align: center;
     margin-bottom: 2px;
 }
